Fix the table overflow on small screens. Docking playlist to top when scrolling in reborn theme.

--- a/themes/fresh/templates/default.css
+++ b/themes/fresh/templates/default.css
@@ -477,6 +477,7 @@ hr {
 table.tabledata
 {
 	width:100%;
+    table-layout: fixed;
 	text-align:left;
 	border:1px solid #bbb;
 }
